--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "expo-av": "~14.0.7",
     "expo-camera": "~15.0.14",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.29",
     "expo-image-picker": "~15.1.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "expo-dev-client": "~4.0.29"
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
