--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "expo export:web",
+    "build:web": "expo export:web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -29,6 +31,9 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "typescript": "~5.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "private": true
 }
