--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
 [build.environment]
   NODE_VERSION = "18.18.0"
   NPM_VERSION = "9.8.1"
+  # GEMINI_API_KEY should be set in Netlify dashboard under Site settings > Environment variables
 
 [[redirects]]
   from = "/*"
