--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Environment Variables
+# Copy this file to .env and fill in your actual values
+
+# Get your Gemini API key from: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=your-gemini-api-key-here
