--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,15 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9.8.1"
   # GEMINI_API_KEY should be set in Netlify dashboard under Site settings > Environment variables
+
+[functions]
+  directory = "netlify/functions"
 
 [[redirects]]
   from = "/*"
