--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~51.0.28",
+    "expo-auth-session": "^6.2.1",
     "expo-av": "~14.0.7",
     "expo-camera": "~15.0.14",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "^14.1.5",
     "expo-dev-client": "~4.0.29",
     "expo-image-picker": "~15.1.0",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "^14.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
