feat: Add Google OAuth Client ID to environment configuration and update Netlify settings to prevent deployment issues

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@
 
 # Get your Gemini API key from: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=your-gemini-api-key-here
+
+# Google OAuth Client ID (This is public and safe to expose in client-side code)
+# OAuth Client IDs are meant to be public - they identify your app to Google
+# Get this from: https://console.cloud.google.com/ > APIs & Services > Credentials
+EXPO_PUBLIC_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
